--- a/data-analyst.html
+++ b/data-analyst.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692392569-manager-data-analysis'>Publicis Groupe Manager, Data & Analysis | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692392569-manager-data-analysis'>Publicis Groupe Manager, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
+<h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/junior-data-analyst-13072'>Junior Data Analyst - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/junior-data-analyst-13072'>Junior Data Analyst - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -145,7 +145,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://link.join.com/jobs/252590-senior-projektleiter-analytics-data-analyst-80-100-m-w'>(Senior) Projektleiter Analytics / Data Analyst 80-100%</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://link.join.com/jobs/252590-senior-projektleiter-analytics-data-analyst-80-100-m-w'>(Senior) Projektleiter Analytics / Data Analyst 80-100%</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17. Juli 2019 ... Link Marketing Services AG has a job opening for (Senior) Projektleiter Analytics 
 / Data Analyst 80-100% (m/w) in Z?rich (published: 30.04.2019). Apply now or?...</p>
@@ -197,7 +197,7 @@ Are you?...</p>
 <p>6 days ago ... The Analytics team is a critical function that supports data-driven decision-making 
 throughout Harry's. The team is the central nervous system of the organization?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
+<h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply Now. Senior Data Analyst (Inventory). at Myntra Jabong (View all jobs). 
 Bengaluru. NA. Apply for this Job. * Required. First Name *. Last Name *. Email *.</p>
@@ -295,7 +295,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
+<h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... We are building a fully automated hightech farm for a totally new industry, insect 
 breeding. Therefore, we are building the technology to understand and optimize
@@ -335,11 +335,11 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://tiaa.referrals.selectminds.com/jobs/data-analyst-1973'>Data Analyst - TIAA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/data-analyst-1973'>Data Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -431,7 +431,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://dealerinspire1.applytojob.com/apply/qScttugSAa/Digital-Marketing-Data-Analyst-Naperville-IL'>Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://dealerinspire1.applytojob.com/apply/qScttugSAa/Digital-Marketing-Data-Analyst-Naperville-IL'>Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
