--- a/data-architect.html
+++ b/data-architect.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692419671-database-architect-4-job-id-603031-'>Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692419671-database-architect-4-job-id-603031-'>Computer Consultants International, Inc. Database Architect 4 (Job ID: 603031) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -104,7 +104,7 @@ Jose, California. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2/apply'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Senior Data Warehouse Architect. San Francisco, California. Wonderschool. Full 
 Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -139,7 +139,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
+<h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -179,7 +179,7 @@ applications?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
@@ -243,7 +243,7 @@ best?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/conviva/job/oaqV9fwo'>Conviva Careers - Principal Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -255,7 +255,7 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -281,7 +281,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=908&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=eabd6045-fc90-4414-913a-bb6920ea66fa'>Senior Data Architect</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=908&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=eabd6045-fc90-4414-913a-bb6920ea66fa'>Senior Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-15</p>
 <hr/>
@@ -301,7 +301,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -313,7 +313,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4350871002'>Job Application for Data Architect/Modeler at HomeAdvisor ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4350871002'>Job Application for Data Architect/Modeler at HomeAdvisor ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Angie's List is seeking a full-time Data Modeler/Architect to join our Data 
 Management team. The right candidate will lead the development of enterprise 
@@ -376,7 +376,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
+<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/data-architect-75361'>Data Architect - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 26, 2019 ... Data and Machine Learning Scientist. United States of America, Illinois, Chicago. 
 Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
@@ -393,7 +393,7 @@ Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jun 26, 2019 ... Apply online for the job of Data Architect at Girteka Logistics.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/groupm-apac/job/ocqrafwX'>GroupM Careers - Gain Theory | Data Architect Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-apac/job/ocqrafwX'>GroupM Careers - Gain Theory | Data Architect Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Overview of the job. As Data Architect Manager you are expected to lead the 
 implementation of ETL processes throughout the design, build and maintenance
@@ -428,7 +428,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -453,7 +453,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=7ba0bb2a1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=7ba0bb2a1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-30</p>
 <hr/>
